--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block content
       hr.light-100
       .row#waarom.indexWrapper
         .col-lg-6#linker_waarom.linkerIndex
-          img(src="/public/img/waarom.jpg" id='img_wat_is_het')
+          img(src="/public/img/waarom.JPG" id='img_wat_is_het')
         .col-lg-6#rechter_waarom.rechterIndex(style="text-align: left")
           h3 Wat is het?
           p Speelplein De Speelberg is jarig en dat moet gevierd worden! Het dertig jarig bestaan van Speelplein De Speelberg mag niet onopgemerkt voorbijgaan, daarom organiseren wij een groot feest en daarop ben jij uitgenodigt! Een hapje, een drankje, muziek en heel veel spelen voor de hele familie!
@@ -18,7 +18,7 @@ block content
           h3 Wie zijn wij?
           p Speelplein De Speelberg is het Beverse Speelplein waar kinderen naar hartelust kunnen ravotten en spelen met hun vrienden! Onze speeltoestellen hebben nog veel te weinig slijtagesporen dus verwachten we je de komende vakantie's terug om te ravotten. Kampen bouwen, knutselen, waterspelletjes, zandbak, schommels, gezelschapspelen of gewoon een intense voetbalmatch.Bij ons kun je het allemaal! Dagelijks staan ook een tiental animatoren klaar die elk een tweetal activiteiten aanbieden. Natuurlijk mag je nog altijd zelf kiezen of je hieraan meedoet of liever kampen bouwt, op de fietsen rijdt, gewoon chillt, ....
         .col-lg-6#rechter_wie_zijn_wij.rechterIndex
-          img(src="/public/img/Wie_zijn_wij.jpg" id='img_wie_zijn_wij')
+          img(src="/public/img/Wie_zijn_wij.JPG" id='img_wie_zijn_wij')
       hr.light-100
       .row#wie_komt_er.indexWrapper
         .col-lg-6#linker_wie_komt_er.linkerIndex
