--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,6 +16,8 @@ html
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
     //Modal script
     script(type="text/javascript" src='../public/js/inschrijvingenModal.js')
+    //add favicon
+    link(rel="shortcut icon" type="image/png" href="/public/img/logo.png")
 
 
   body
